# stake

./: .gitignore  Cargo.toml  Makefile  README.md  SECURITY.md  codama.json  codama.mjs  idl.json  package.json  pnpm-lock.yaml  program-id.md  rustfmt.toml
.github/: dependabot.yml
.github/actions/setup/: action.yml
.github/workflows/: main.yml  publish-js-client.yml  publish-js.yml  publish-rust-crate.yml  publish-rust.yml
clients/js/: README.md  package.json  pnpm-lock.yaml
clients/js/test/: _setup.ts  create.test.ts
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/rust/src/hooked/: mod.rs  stake_account.rs  stake_state.rs  stake_state_account.rs
clients/rust/tests/: create.rs
interface/: Cargo.toml  README.md  build.rs  idl.json
interface/src/: config.rs  emulated_u128.rs  error.rs  instruction.rs  lib.rs  stake_flags.rs  stake_history.rs  state.rs  test_utils.rs  tools.rs  ulp.rs  warmup_cooldown_allowance.rs
interface/src/instruction_builder/: initialize.rs  mod.rs  split.rs
interface/src/sysvar/: mod.rs  stake_history.rs
interface/tests/: codama_schema.rs
pinocchio/interface/: Cargo.toml
pinocchio/interface/src/: error.rs  lib.rs  pod.rs  state.rs
pinocchio/interface/src/state/: entrypoint.rs  layout.rs  mod.rs  pod.rs  view.rs  writer.rs
pinocchio/interface/tests/: abi.rs  bincode_compat.rs  common.rs  compat_bincode.rs  pod.rs  proptests.rs  state.rs  tag.rs  transitions.rs  view.rs  view_mut.rs  writer.rs
pinocchio/interface/tests/helpers/: arb.rs  layout.rs  legacy.rs  mod.rs
pinocchio/test-utils/: Cargo.toml
pinocchio/test-utils/src/: corpus_iters.rs  lib.rs  request.rs
program/: Cargo.toml  idl.json
program/src/: entrypoint.rs  lib.rs  processor.rs
program/src/helpers/: delegate.rs  merge.rs  mod.rs  split.rs
program/tests/: authorize.rs  checked_instructions.rs  deactivate.rs  delegate.rs  helpers.rs  initialize.rs  interface.rs  merge.rs  mollusk.rs  move_lamports.rs  move_stake.rs  program_test.rs  set_lockup.rs  split.rs  stake_instruction.rs  stake_tracker_equivalence.rs  tests.rs  withdraw.rs
program/tests/helpers/: context.rs  execution.rs  instruction_builders.rs  lifecycle.rs  mod.rs  stake_tracker.rs  utils.rs
scripts/: check-solana-version.mjs  generate-clients.mjs  generate-clients.mts  generate-idls.mjs  js.mts  restart-test-validator.sh  rust.mts  solana.dic  utils.mts
scripts/ci/: set-env.mts
scripts/helpers/: check-solana-version.mts  generate-clients.mts  link-solana-version.mts  start-validator.mts  upgrade-template.mts  utils.mts
scripts/program/: build.mjs  test.mjs
src/: config.rs  entrypoint.rs  lib.rs  omnibus.rs  processor.rs  stake_instruction.rs  stake_state.rs
src/helpers/: delegate.rs  merge.rs  mod.rs  split.rs
tests/: tests.rs
