[workspace]
resolver = "2"
members = [
    "clients/rust",
    "interface",
    "program",
]

[workspace.package]
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/stake"
homepage = "https://anza.xyz/"
license = "Apache-2.0"
edition = "2021"

[workspace.metadata.cli]
solana = "2.1.0"

[workspace.metadata.toolchains]
build = "1.81.0"
format = "nightly-2024-08-08"
lint = "nightly-2024-08-08"
test = "nightly-2024-08-08"
