[workspace]
resolver = "2"
members = [
    "clients/rust",
    "interface",
    "program",
]

[workspace.package]
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/stake"
homepage = "https://anza.xyz/"
license = "Apache-2.0"
edition = "2021"

[workspace.metadata.cli]
solana = "3.0.0"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("custom-heap", "custom-panic", "frozen-abi", "no-entrypoint"))',
]

[workspace.metadata.toolchains]
build = "1.86.0"
format = "nightly-2025-02-16"
lint = "nightly-2025-02-16"
test = "nightly-2025-02-16"

[workspace.metadata.spellcheck]
config = "scripts/spellcheck.toml"
