[workspace]
resolver = "2"
members = [
    "clients/rust",
    "interface",
    "program",
    "pinocchio/interface",
]

[workspace.package]
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/stake"
homepage = "https://anza.xyz/"
license = "Apache-2.0"
edition = "2021"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("codama", "custom-heap", "custom-panic", "frozen-abi", "no-entrypoint"))',
]

[workspace.metadata.spellcheck]
config = "scripts/spellcheck.toml"
