[package]
name = "solana-stake-interface"
version = "2.0.1"
description = "Instructions and constructors for the Stake program"
readme = "README.md"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = "1.81.0"

[lib]
crate-type = ["rlib"]

[package.metadata.solana]
program-id = "Stake11111111111111111111111111111111111111"

[dependencies]
borsh = { version = "1.5.7", features = ["derive", "unstable__schema"], optional = true }
num-traits = "0.2"
serde = { version = "1.0.210", optional = true }
serde_derive = { version = "1.0.210", optional = true }
solana-clock = "3.0.0"
solana-cpi = { version = "3.1.0", optional = true }
solana-frozen-abi = { version = "3.0.1", features = ["frozen-abi"], optional = true }
solana-frozen-abi-macro = { version = "3.0.1", features = ["frozen-abi"], optional = true }
solana-instruction = "3.0.0"
solana-program-error = "3.0.0"
solana-pubkey = { version = "3.0.0", default-features = false }
solana-system-interface = "2.0.0"
solana-sysvar = { version = "3.0.0", optional = true }
solana-sysvar-id = { version = "3.0.0", optional = true }

[dev-dependencies]
anyhow = "1"
assert_matches = "1.5.0"
bincode = "1.3.3"
serial_test = "3.2.0"
solana-account = {version = "3.2.0", features = ["bincode"] }
solana-borsh = "3.0.0"
solana-example-mocks = "3.0.0"
solana-sdk-ids = "3.0.0"
solana-stake-interface = { path = ".", features = ["bincode", "borsh", "sysvar"] }
static_assertions = "1.1.0"
strum = "0.27"
strum_macros = "0.27"
test-case = "3.3.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
bincode = [
    "dep:solana-cpi",
    "solana-instruction/bincode",
    "solana-instruction/serde",
    "solana-system-interface/bincode",
    "solana-sysvar/bincode",
    "serde"
]
borsh = [
    "dep:borsh",
    "solana-instruction/borsh",
    "solana-program-error/borsh",
    "solana-pubkey/borsh"
]
frozen-abi = [
    "dep:solana-frozen-abi",
    "dep:solana-frozen-abi-macro",
    "solana-instruction/frozen-abi",
    "solana-pubkey/frozen-abi",
    "solana-sysvar/frozen-abi",
]
serde = ["dep:serde", "dep:serde_derive", "solana-pubkey/serde", "solana-sysvar/serde"]
sysvar = ["dep:solana-sysvar", "dep:solana-sysvar-id"]
