[package]
name = "solana-stake-program"
version = "1.0.0"
description = "Solana BPF Stake Program"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/stake-program"
license = "Apache-2.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
solana-account-info = { version = "3.0.0", features = ["bincode"] }
solana-clock = "3.0.0"
solana-cpi = "3.0.0"
solana-instruction-error = "2.0.0"
solana-msg = "3.0.0"
solana-native-token = "3.0.0"
solana-program-entrypoint = "3.0.0"
solana-program-error = "3.0.0"
solana-pubkey = "3.0.0"
solana-rent = "3.0.0"
solana-stake-interface = { version = "2", features = ["bincode", "borsh", "sysvar"] }
solana-sysvar = "3.0.0"
solana-vote-interface = { version = "4.0.4", features = ["bincode"] }

[dev-dependencies]
agave-feature-set = "3.0.0"
arbitrary = { version = "1.4.2", features = ["derive"] }
assert_matches = "1.5.0"
mollusk-svm = { version = "0.7.0", features = ["all-builtins"] }
proptest = "1.9.0"
rand = "0.9.2"
solana-account = { version = "3.2.0", features = ["bincode"] }
solana-config-interface = { version = "2", features = ["serde"] }
solana-epoch-rewards = "3.0.0"
solana-epoch-schedule = "3.0.0"
solana-instruction = "3.0.0"
solana-keypair = "3.0.0"
solana-logger = "3.0.0"
solana-program-test = "3.0.10"
solana-sdk-ids = "3.0.0"
solana-signature = "3.0.0"
solana-signer = "3.0.0"
solana-system-interface = { version = "2.0.0", features = ["bincode"] }
solana-sysvar-id = "3.0.0"
solana-transaction = "3.0.0"
test-case = "3.3.1"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[package.metadata.solana]
program-id = "Stake11111111111111111111111111111111111111"
