[package]
name = "solana-stake-program"
version = "5.0.0"
description = "Solana BPF Stake Program"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/stake-program"
license = "Apache-2.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
solana-account-info = { version = "3.1.1", features = ["bincode"] }
solana-clock = "3.0.1"
solana-cpi = "3.0.0"
solana-instruction-error = "2.3.0"
solana-msg = "3.1.0"
solana-native-token = "3.0.0"
solana-program-entrypoint = "3.0.0"
solana-program-error = "3.0.1"
solana-pubkey = "4.2.0"
solana-rent = "3.0.0"
solana-security-txt = "1.1.2"
solana-stake-interface = { path = "../interface", version = "4.0.0", features = ["bincode", "borsh", "sysvar"] }
solana-sysvar = "3.0.0"
solana-sysvar-id = "3.1.0"
solana-vote-interface = { version = "5.0.0", features = ["bincode"] }

[dev-dependencies]
agave-feature-set = "3.0.0"
arbitrary = { version = "1.4.2", features = ["derive"] }
assert_matches = "1.5.0"
mollusk-svm = { version = "0.12.0", features = ["all-builtins"] }
mollusk-svm-result = "0.12.0"
proptest = "1.11.0"
rand = "0.10.1"
solana-account = { version = "3.2.0", features = ["bincode"] }
solana-config-interface = { version = "2", features = ["serde"] }
solana-epoch-rewards = "3.0.1"
solana-epoch-schedule = "3.1.0"
solana-instruction = "3.4.0"
solana-keypair = "3.1.2"
solana-logger = "3.0.0"
solana-program-test = { version = "3.1.3", features = ["agave-unstable-api"] }
solana-pubkey = { version = "4.2.0", features = ["rand"] }
solana-sdk-ids = "3.1.0"
solana-signature = "3.4.0"
solana-signer = "3.0.0"
# TODO: Remove after agave/mollusk/stake-program depend on aligned StakeHistory version
#       Either solana-stake-interface v3 or new solana-stake-history crate
solana-stake-interface-v2 = { package = "solana-stake-interface", version = "2.0.1" }
solana-svm-log-collector = "3.0.0"
solana-system-interface = { version = "2.0.0", features = ["bincode"] }
solana-transaction = "3.0.2"
test-case = "3.3.1"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[package.metadata.solana]
program-id = "Stake11111111111111111111111111111111111111"
