[package]
name = "solana-stake-client"
version = "0.0.0"
description = "A generated Rust library for the Stake program"
repository = "https://github.com/solana-program/stake"
edition = "2021"
readme = "README.md"
license-file = "../../LICENSE"

[features]
serde = ["dep:serde", "dep:serde_with"]

[dependencies]
borsh = { version = "1.6", features = ["derive"] }
num-derive = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_with = { version = "3.17", optional = true }
solana-account-info = "^3.1"
solana-cpi = "3.0"
solana-instruction = "3.2"
solana-program-error = "3.0"
solana-pubkey = { version = "3.0", features = ["borsh", "serde"] }
thiserror = "2.0"

[dev-dependencies]
assert_matches = "1.5.0"
