[package]
name = "solana-stake-client"
version = "0.0.0"
description = "A generated Rust library for the Stake program"
repository = "https://github.com/solana-program/stake"
edition = "2021"
readme = "README.md"
license-file = "../../LICENSE"

[dependencies]
borsh = { version = "1.6", features = ["derive"] }
num-derive = "0.4"
num-traits = "0.2"
solana-account-info = "^3.1"
solana-address = { version = "2.6", features = ["borsh", "curve25519"] }
solana-cpi = "3.1"
solana-instruction = "3.4"
solana-program-error = "3.0"
spl-collections = { version = "0.1", features = ["borsh"] }
thiserror = "2.0"

[dev-dependencies]
assert_matches = "1.5.0"
