[package]
name = "p-stake-interface"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }

[dependencies]
wincode = { version = "0.4.4", features = ["derive"] }
solana-address = { version = "2.2.0", features = ["wincode"] }

[dev-dependencies]
bincode = "1.3.3"
proptest = "1.10.0"
solana-pubkey = "3.0.0"
solana-stake-interface = { path = "../../interface", features = ["bincode"] }
test-case = "3.3.1"
