[package]
name = "p-stake-test-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
flate2 = "1.0.35"
reqwest = { version = "0.11.27", features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
solana-account = { version = "3.2.0", features = ["serde"] }
solana-address = { version = "2.0.0", features = ["serde"] }
tar = "0.4.44"
